# rag-chatbot-template

./: .gitignore  README.md  pyproject.toml
docs/samples/: sample_rag_delivery_report.typ
documents/: company_policy.txt
examples/: questions.txt
src/rag_chatbot_template/: chat.py
tests/: test_rag.py
